@@ -45,6 +45,7 @@ import com.velocitypowered.proxy.config.VelocityConfiguration;
 import com.velocitypowered.proxy.connection.client.ConnectedPlayer;
 import com.velocitypowered.proxy.connection.player.VelocityResourcePackInfo;
 import com.velocitypowered.proxy.console.VelocityConsole;
+import com.velocitypowered.proxy.crypto.EncryptionUtils;
 import com.velocitypowered.proxy.event.VelocityEventManager;
 import com.velocitypowered.proxy.network.ConnectionManager;
 import com.velocitypowered.proxy.plugin.VelocityPluginManager;
@@ -55,7 +56,6 @@ import com.velocitypowered.proxy.scheduler.VelocityScheduler;
 import com.velocitypowered.proxy.server.ServerMap;
 import com.velocitypowered.proxy.util.AddressUtil;
 import com.velocitypowered.proxy.util.ClosestLocaleMatcher;
-import com.velocitypowered.proxy.util.EncryptionUtils;
 import com.velocitypowered.proxy.util.FileSystemUtils;
 import com.velocitypowered.proxy.util.VelocityChannelRegistrar;
 import com.velocitypowered.proxy.util.bossbar.AdventureBossBarManager;
@@ -67,10 +67,10 @@ import io.netty.channel.Channel;
 import io.netty.channel.ChannelInitializer;
 import io.netty.channel.EventLoopGroup;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.AccessController;
 import java.security.KeyPair;
 import java.security.PrivilegedAction;
@@ -80,7 +80,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.ResourceBundle;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
@@ -97,7 +96,6 @@ import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.translation.GlobalTranslator;
 import net.kyori.adventure.translation.TranslationRegistry;
-import net.kyori.adventure.util.UTF8ResourceBundleControl;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.asynchttpclient.AsyncHttpClient;
@@ -209,7 +207,8 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
     // Initialize commands first
     commandManager.register("velocity", new VelocityCommand(this));
     commandManager.register("server", new ServerCommand(this));
-    commandManager.register("shutdown", new ShutdownCommand(this),"end");
+    commandManager.register("shutdown", ShutdownCommand.command(this),
+        "end", "stop");
     new GlistCommand(this).register();
 
     this.doStartupConfigLoad();
@@ -251,8 +250,30 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
       FileSystemUtils.visitResources(VelocityServer.class, path -> {
         logger.info("Loading localizations...");
 
+        final Path langPath = Path.of("lang");
+
         try {
-          Files.walk(path).forEach(file -> {
+          if (!Files.exists(langPath)) {
+            Files.createDirectory(langPath);
+            Files.walk(path).forEach(file -> {
+              if (!Files.isRegularFile(file)) {
+                return;
+              }
+              try {
+                Path langFile = langPath.resolve(file.getFileName().toString());
+                if (!Files.exists(langFile)) {
+                  try (InputStream is = Files.newInputStream(file)) {
+                    Files.copy(is, langFile);
+                  }
+                }
+              } catch (IOException e) {
+                logger.error("Encountered an I/O error whilst loading translations", e);
+              }
+            });
+          }
+
+
+          Files.walk(langPath).forEach(file -> {
             if (!Files.isRegularFile(file)) {
               return;
             }
@@ -262,16 +283,11 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
             String localeName = filename.replace("messages_", "")
                 .replace("messages", "")
                 .replace('_', '-');
-            Locale locale;
-            if (localeName.isEmpty()) {
-              locale = Locale.US;
-            } else {
-              locale = Locale.forLanguageTag(localeName);
-            }
+            Locale locale = localeName.isBlank()
+                ? Locale.US
+                : Locale.forLanguageTag(localeName);
 
-            translationRegistry.registerAll(locale,
-                ResourceBundle.getBundle("com/velocitypowered/proxy/l10n/messages",
-                    locale, UTF8ResourceBundleControl.get()), false);
+            translationRegistry.registerAll(locale, file, false);
             ClosestLocaleMatcher.INSTANCE.registerKnown(locale);
           });
         } catch (IOException e) {
@@ -282,13 +298,13 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
       logger.error("Encountered an I/O error whilst loading translations", e);
       return;
     }
-    GlobalTranslator.get().addSource(translationRegistry);
+    GlobalTranslator.translator().addSource(translationRegistry);
   }
 
   @SuppressFBWarnings("DM_EXIT")
   private void doStartupConfigLoad() {
     try {
-      Path configPath = Paths.get("velocity.toml");
+      Path configPath = Path.of("velocity.toml");
       configuration = VelocityConfiguration.read(configPath);
 
       if (!configuration.validate()) {
@@ -299,6 +315,9 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
       }
 
       commandManager.setAnnounceProxyCommands(configuration.isAnnounceProxyCommands());
+      if (System.getProperty("auth.forceSecureProfiles") == null) {
+        System.setProperty("auth.forceSecureProfiles", String.valueOf(configuration.isForceKeyAuthentication()));
+      }
     } catch (Exception e) {
       logger.error("Unable to read/load/save your velocity.toml. The server will shut down.", e);
       LogManager.shutdown();
@@ -310,7 +329,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
     logger.info("Loading plugins...");
 
     try {
-      Path pluginPath = Paths.get("plugins");
+      Path pluginPath = Path.of("plugins");
 
       if (!pluginPath.toFile().exists()) {
         Files.createDirectory(pluginPath);
@@ -362,7 +381,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
    * @throws IOException if we can't read {@code velocity.toml}
    */
   public boolean reloadConfiguration() throws IOException {
-    Path configPath = Paths.get("velocity.toml");
+    Path configPath = Path.of("velocity.toml");
     VelocityConfiguration newConfiguration = VelocityConfiguration.read(configPath);
 
     if (!newConfiguration.validate()) {
@@ -502,6 +521,9 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
         Thread.currentThread().interrupt();
       }
 
+      // Since we manually removed the shutdown hook, we need to handle the shutdown ourselves.
+      LogManager.shutdown();
+
       shutdown = true;
 
       if (explicitExit) {
@@ -530,7 +552,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
    * @param explicitExit whether the user explicitly shut down the proxy
    */
   public void shutdown(boolean explicitExit) {
-    shutdown(explicitExit, Component.text("Proxy shutting down."));
+    shutdown(explicitExit, Component.translatable("velocity.kick.shutdown"));
   }
 
   @Override
